force-app/main/default/objects/Orders__c/fields/AusWalk_Misc_Charge__c.field-meta.xml
<CustomField>
    <fullName>AusWalk_Misc_Charge__c</fullName>
    <defaultValue>60</defaultValue>
    <label>AusWalk Misc Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>