force-app/main/default/objects/Orders__c/fields/Passenger_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Quantity__c</fullName>
    <label>Passenger Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>